--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                          <!-- <div id="status"> 
                         </div> -->
                     <a href="https://www.facebook.com/" class="facebook">
-                       <div> <img src="/assets/pics/fb2.png" alt=""></div>
+                       <div> <img src="assets/pics/fb2.png" alt=""></div>
                         <div class="centre1">  Sign up with Facebook</div>
                 </a>
                 </li>
@@ -77,8 +77,8 @@
         
     </div>
     <script>startApp();</script>
-    <script src="/form.js"></script>
-    <script src="/app.js"></script>
+    <script src="assets/form.js"></script>
+    <script src="assets/app.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://apis.google.com/js/api:client.js"></script>
     <script src="assets/google.js"></script>
