--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         
     </div>
     <script>startApp();</script>
-    <script src="/form.js"></script>
-    <script src="/app.js"></script>
+    <script src="form.js"></script>
+    <script src="assets/app.js"></script>
     
 </body>
 </html>
